add back variables.less to fontawesome imports

--- a/src/app/styles/fontawesome.less
+++ b/src/app/styles/fontawesome.less
@@ -24,6 +24,7 @@
 @import "@{fa-nodemodules-less-path}/_rotated-flipped.less";
 @import "@{fa-nodemodules-less-path}/_screen-reader.less";
 @import "@{fa-nodemodules-less-path}/_shims.less";
+@import "@{fa-nodemodules-less-path}/_variables.less";
 @import "@{fa-nodemodules-less-path}/_stacked.less";
 @import "@{fa-nodemodules-less-path}/brands.less";
 @import "@{fa-nodemodules-less-path}/duotone.less";
