set up most of the styling for index flow

--- a/packages/compass/src/app/styles/fonts.less
+++ b/packages/compass/src/app/styles/fonts.less
@@ -70,3 +70,11 @@
     url('@{compass-fonts-path}/EuclidCircularA-RegularItalic-WebXL.woff')
       format('woff');
 }
+
+/* Regular */
+@font-face {
+  font-family: 'Source Code Pro';
+  font-weight: 400, normal;
+  src: url('font/SourceCodePro-Regular.otf.woff2') format('woff2'),
+    url('font/SourceCodePro-Regular.otf.woff') format('woff');
+}
