--- a/packages/compass-schema/src/components/coordinates-minichart/coordinates-minichart.css
+++ b/packages/compass-schema/src/components/coordinates-minichart/coordinates-minichart.css
@@ -1,4 +1,4 @@
-.leaflet-draw-toolbar a {
+/* .leaflet-draw-toolbar a {
   background-image: url(~leaflet-draw/dist/images/spritesheet.png);
   background-image: linear-gradient(transparent, transparent),
     url(~leaflet-draw/dist/images/spritesheet.svg);
@@ -8,4 +8,4 @@
   background-image: url(~leaflet-draw/dist/images/spritesheet-2x.png);
   background-image: linear-gradient(transparent, transparent),
     url(~leaflet-draw/dist/images/spritesheet.svg);
-}
+} */
